fix template view name for job definitions (don't use path name as view name because SpringMVC Standalone Setup is not using the correct thymleaf view resolver and is throwing an error because of cyclar view resolving)
Co-authored-by: Mauro Risso <mauro.risso@otto.de>
Co-authored-by: Matthias Geißendörfer <matthias.geissendoerfer@otto.de>